--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -6,6 +6,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+:root {
+  --swiper-navigation-color: black;
+  --swiper-navigation-size: 3rem;
+  --swiper-navigation-sides-offset: 2rem;
+}
+
 .tw-revert ol, .tw-revert ul, .tw-revert menu {
   list-style: revert;
   margin: revert;
