--- a/assets/app.css
+++ b/assets/app.css
@@ -1992,10 +1992,6 @@ video {
   width: 100vw;
 }
 
-.tw-w-1\/2 {
-  width: 50%;
-}
-
 .tw-max-w-6xl {
   max-width: 72rem;
 }
@@ -2745,6 +2741,12 @@ video {
 
 .tw-ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+:root {
+  --swiper-navigation-color: black;
+  --swiper-navigation-size: 3rem;
+  --swiper-navigation-sides-offset: 2rem;
 }
 
 .tw-revert ol, .tw-revert ul, .tw-revert menu {
