--- a/sections/tc-scrolling-image-bar.liquid
+++ b/sections/tc-scrolling-image-bar.liquid
@@ -340,6 +340,28 @@
   </article>
 
 
+  <swiper-container space-between="30" autoplay-delay="4000" loop="true" css-mode="true" autoplay-disable-on-interaction="false"  class="page-width mobile-only">
+    {%for block in section.blocks %}
+    <swiper-slide class="review-tile {% if block.settings.image != blank %}square {%endif %}" {{ block.shopify_attributes }}>
+      {% if block.settings.image != blank %}
+      {{block.settings.image |  image_url: width: 600 |  image_tag }}
+      {% else %}
+      <div class="review-text-container">
+        <div class="stars-container">
+          {% for i in (1..block.settings.stars) %}  
+            {% render 'tc-lucide-icon',icon_name: "lucide-star" %}
+          {% endfor %}
+          </div>
+          <p>{{block.settings.review}}</p>
+          <p class="review-author">
+            Reviewed by <strong>{{block.settings.author}}</strong>
+          </p>
+          <div class="verified-container">{%render 'tc-lucide-icon', icon_name: "lucide-shield-check" %} Verified purchase <span>{{block.settings.date}}</span></div>
+      </div>
+      {% endif %}
+    </swiper-slide>
+  {% endfor %}
+</swiper-container>
 </section>
 
 <script></script>
