--- a/sections/sample-scan.liquid
+++ b/sections/sample-scan.liquid
@@ -141,7 +141,7 @@
         {% for block in section.blocks %}
           {% if block.type == "scan_image" %}
             <a
-              class="swiper-slide tw-relative"
+              class="swiper-slide swiper-slide-{{ section.id }} swiper-slide-{{ block.id }} tw-relative"
               href="{{ block.settings.sample_scan_positive | image_url: width: 3840 }}"
               data-pswp-width="3000"
               data-pswp-height="2000"
@@ -181,18 +181,108 @@
 
                 </div>
               {% endunless %}
-              <div class="click-zoom-container positive tw-overflow-hidden tw-w-full tw-h-full">
                 <img
                   srcset="{{ block.settings.sample_scan_positive | image_url: width: 1400 }} 1x, {{ block.settings.sample_scan_positive | image_url: width: 3840 }} 4x"
                   sizes="1400px, 3840px"
                   class="positive-{{block.id}}  tw-origin-center tw-object-cover tw-w-full tw-h-full" />
-              </div>
-              <div class="click-zoom-container negative hidden tw-overflow-hidden tw-w-full tw-h-full">
                 <img
                   srcset="{{ block.settings.sample_scan_negative | image_url: width: 1400 }} 1x, {{ block.settings.sample_scan_negative | image_url: width: 3840 }} 4x"
                   sizes="1400px, 3840px"
-                  class="negative-{{block.id}}  tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+                  class="negative-{{block.id}} hidden  tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+              <div class="md:tw-hidden tw-p-6 tw-pb-0">
+                {% unless block.settings.camera == blank and block.settings.lens == blank and block.settings.light_source == blank and block.settings.converted_with == blank and block.settings.film_stock == blank %}
+                  <div class="tw-z-10 tw-grid tw-grid-cols-2 tw-gap-x-2 tw-gap-y-4">
+                    {% if block.settings.camera != blank %}
+                      <div class="tw-flex tw-flex-col tw-gap-1">
+                        <span class="tw-uppercase tw-text-xs tw-font-bold">Camera</span>
+                        <span>{{ block.settings.camera }}</span>
+                      </div>
+                    {% endif %}
+                    {% if block.settings.lens != blank %}
+                      <div class="tw-flex tw-flex-col tw-gap-1">
+                        <span class="tw-uppercase tw-text-xs tw-font-bold">Lens</span>
+                        <span>{{ block.settings.lens }}</span>
+                      </div>
+                    {% endif %}
+                    {% if block.settings.light_source != blank %}
+                      <div class="tw-flex tw-flex-col tw-gap-1">
+                        <span class="tw-uppercase tw-text-xs tw-font-bold">Light source</span>
+                        <span>{{ block.settings.light_source }}</span>
+                      </div>
+                    {% endif %}
+                    {% if block.settings.converted_with != blank %}
+                      <div class="tw-flex tw-flex-col tw-gap-1">
+                        <span class="tw-uppercase tw-text-xs tw-font-bold">Converted with</span>
+                        <span>{{ block.settings.converted_with }}</span>
+                      </div>
+                    {% endif %}
+                    {% if block.settings.film_stock != blank %}
+                      <div class="tw-flex tw-flex-col tw-gap-1">
+                        <span class="tw-uppercase tw-text-xs tw-font-bold">Film stock</span>
+                        <span>{{ block.settings.film_stock }}</span>
+                      </div>
+                    {% endif %}
+
+                  </div>
+                {% endunless %}
               </div>
+            </a>
+          {%- endif -%}
+
+        {%- endfor -%}
+      </ul>
+      <ul class="swiper-wrapper swiper-wrapper-{{section.id}}">
+        {% for block in section.blocks %}
+          {% if block.type == "scan_image" %}
+            <a
+              class="swiper-slide swiper-slide-{{ section.id }} swiper-slide-{{ block.id }} tw-relative"
+              href="{{ block.settings.sample_scan_positive | image_url: width: 3840 }}"
+              data-pswp-width="3000"
+              data-pswp-height="2000"
+              target="_blank">
+              {% unless block.settings.camera == blank and block.settings.lens == blank and block.settings.light_source == blank and block.settings.converted_with == blank and block.settings.film_stock == blank %}
+                <div class="scan-info-block tw-opacity-100 hover:tw-opacity-0 tw-transition-opacity tw-duration-300 tw-z-10 tw-hidden tw-text-white md:tw-flex tw-flex-col tw-gap-2 tw-absolute tw-left-4 tw-top-4 tw-bg-black/40 tw-backdrop-blur-md tw-p-6">
+                  {% if block.settings.camera != blank %}
+                    <div class="tw-flex tw-flex-col tw-gap-1">
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Camera</span>
+                      <span>{{ block.settings.camera }}</span>
+                    </div>
+                  {% endif %}
+                  {% if block.settings.lens != blank %}
+                    <div class="tw-flex tw-flex-col tw-gap-1">
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Lens</span>
+                      <span>{{ block.settings.lens }}</span>
+                    </div>
+                  {% endif %}
+                  {% if block.settings.light_source != blank %}
+                    <div class="tw-flex tw-flex-col tw-gap-1">
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Light source</span>
+                      <span>{{ block.settings.light_source }}</span>
+                    </div>
+                  {% endif %}
+                  {% if block.settings.converted_with != blank %}
+                    <div class="tw-flex tw-flex-col tw-gap-1">
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Converted with</span>
+                      <span>{{ block.settings.converted_with }}</span>
+                    </div>
+                  {% endif %}
+                  {% if block.settings.film_stock != blank %}
+                    <div class="tw-flex tw-flex-col tw-gap-1">
+                      <span class="tw-uppercase tw-text-xs tw-font-bold">Film stock</span>
+                      <span>{{ block.settings.film_stock }}</span>
+                    </div>
+                  {% endif %}
+
+                </div>
+              {% endunless %}
+                <img
+                  srcset="{{ block.settings.sample_scan_positive | image_url: width: 1400 }} 1x, {{ block.settings.sample_scan_positive | image_url: width: 3840 }} 4x"
+                  sizes="1400px, 3840px"
+                  class="positive-{{block.id}}  tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+                <img
+                  srcset="{{ block.settings.sample_scan_negative | image_url: width: 1400 }} 1x, {{ block.settings.sample_scan_negative | image_url: width: 3840 }} 4x"
+                  sizes="1400px, 3840px"
+                  class="negative-{{block.id}} hidden  tw-origin-center tw-object-cover tw-w-full tw-h-full" />
               <div class="md:tw-hidden tw-p-6 tw-pb-0">
                 {% unless block.settings.camera == blank and block.settings.lens == blank and block.settings.light_source == blank and block.settings.converted_with == blank and block.settings.film_stock == blank %}
                   <div class="tw-z-10 tw-grid tw-grid-cols-2 tw-gap-x-2 tw-gap-y-4">
@@ -322,6 +412,7 @@
 <script>
   const positives = document.querySelectorAll(".positive");
   const negatives = document.querySelectorAll(".negative");
+  const slides = document.querySelectorAll(".swiper-slide-{{ section.id }}")
   const toggle = document.querySelector("#negative_mode");
       const section = document.querySelector(".section-{{section.id}}")
   toggle.addEventListener("change", (e) => {
