--- a/sections/tc-product-image-cards.liquid
+++ b/sections/tc-product-image-cards.liquid
@@ -145,166 +145,168 @@
   <div class="page-width !tw-pr-24 md:!tw-pr-0 tw-relative">
     <div id="right-mask-{{section.id}}" class="tw-absolute md:tw-hidden tw-top-0 tw-right-0 tw-h-full tw-w-24 tw-z-50 color-{{ section.settings.color_scheme }} tc-fade-to-left"></div>
   <div id="left-mask-{{section.id}}" class="tw-absolute md:tw-hidden hidden tw-top-0 tw-left-0 tw-h-full tw-w-24 tw-z-50 color-{{ section.settings.color_scheme }} tc-fade-to-right"></div>
-    <swiper-container
+    <div
       id="swiper-{{section.id}}"
       init="false"
-      class="tw-w-full md:tw-h-full">
-      {% for block in section.blocks %}
-        {% if block.type == 'card' %}
-          <swiper-slide>
-            <div
-              class="card-{{ section.id }} {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %} tw-group tw-cursor-grab tw-relative"
-              {% if settings.animations_reveal_on_scroll %}
-              data-cascade
-              style="--animation-order: {{ forloop.index }};"
-              {% endif %}
-              {{ block.shopify_attributes }}>
-              {% unless block.settings.badge == blank %} 
-                <div style="color: {{block.settings.badge_color}}; border-color: {{block.settings.badge_color}}" class="tw-absolute tw-left-6 tw-top-6 tw-px-6 tw-py-3 tw-text-lg tw-rounded tw-font-bold tw-border">{{block.settings.badge}}</div>
-              {% endunless %}
-            {%if block.settings.product != blank%}<a href="{{ shop.url }}{{ block.settings.product.url }}" class="card-image-container-{{ section.id }} tw-cursor-grab">{% else %}<div class="card-image-container-{{ section.id }}">{% endif %}
-                <img
-                  style="transform: ({% if block.settings.image_primary_offset_x_flip %}-{% endif %}{{block.settings.image_primary_offset_x}}%;  {% if block.settings.image_primary_offset_y_flip %}-{% endif %}{{block.settings.image_primary_offset_y}}%)"
-                  srcset="{{ block.settings.image_primary | image_url: width: 350 }} 1x, {{ block.settings.image_primary | image_url: width: 700 }} 2x"
-                  sizes="300px, 600px"
-                  class="card-image-primary-{{section.id}} md:group-hover:tw-scale-110 tw-transition-all tw-duration-300 tw-ease-in-out tw-select-none" />
-                {% unless block.settings.image_secondary == blank %}
-                  <img
-                    style="transform: ({% if block.settings.image_secondary_offset_x_flip %}-{% endif %}{{block.settings.image_secondary_offset_x}}%;  {% if block.settings.image_primary_offset_y_flip %}-{% endif %}{{block.settings.image_primary_offset_y}}%)"
-                    srcset="{{ block.settings.image_secondary | image_url: width: 350 }} 1x, {{ block.settings.image_secondary | image_url: width: 700 }} 2x"
+      class="swiper swiper-{{ section.id }} tw-w-full md:tw-h-full">
+      <ul class="swiper-wrapper swiper-wrapper-{{ section.id }}">
+
+        {% for block in section.blocks %}
+          {% if block.type == 'card' %}
+            <li class="swiper-slide swiper-slide-{{block-id}} swiper-slide-{{ section.id }}">
+              <div
+                class="card-{{ section.id }} {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %} tw-group tw-cursor-grab tw-relative"
+                {% if settings.animations_reveal_on_scroll %}
+                data-cascade
+                style="--animation-order: {{ forloop.index }};"
+                {% endif %}
+                {{ block.shopify_attributes }}>
+                {% unless block.settings.badge == blank %} 
+                  <div style="color: {{block.settings.badge_color}}; border-color: {{block.settings.badge_color}}" class="tw-absolute tw-left-6 tw-top-6 tw-px-6 tw-py-3 tw-text-lg tw-rounded tw-font-bold tw-border">{{block.settings.badge}}</div>
+                {% endunless %}
+              {%if block.settings.product != blank%}<a href="{{ shop.url }}{{ block.settings.product.url }}" class="card-image-container-{{ section.id }} tw-cursor-grab">{% else %}<div class="card-image-container-{{ section.id }}">{% endif %}
+                  {% unless  block.settings.image_primary == blank %} 
+                    <img
+                    style="transform: ({% if block.settings.image_primary_offset_x_flip %}-{% endif %}{{block.settings.image_primary_offset_x}}%;  {% if block.settings.image_primary_offset_y_flip %}-{% endif %}{{block.settings.image_primary_offset_y}}%)"
+                    srcset="{{ block.settings.image_primary | image_url: width: 350 }} 1x, {{ block.settings.image_primary | image_url: width: 700 }} 2x"
                     sizes="300px, 600px"
-                    class="card-image-secondary-{{section.id}} md:group-hover:tw-opacity-100 tw-opacity-0 md:group-hover:tw-scale-110 tw-transition-all tw-duration-300 tw-ease-in-out tw-select-none" />
-                {% endunless %}
-            {%if block.settings.product != blank%}</a>{% else %}</div>{% endif %}
-              <div class="card-info-container-{{ section.id }}">
-                <h4 class="h3">
-                  {% if block.settings.title == blank %}
-                    {{ block.settings.product.title }}
-                  {% else %}
-                    {{ block.settings.title }}{% endif %}
-                </h4>
-                {% unless block.settings.product == blank %}
-                  <span class="tw-mb-4">
-                    {{ block.settings.product.price | money }}
-                  </span>
-                {% endunless %}
-
-                {% unless block.settings.description == blank %}
-                  {% assign description_lines = block.settings.description | split: "|" %}
-                  {% if description_lines.size > 1 %}
-                    <ul class="tw-flex tw-flex-col tw-gap-2">
-                    {% for line in description_lines %}
-                      <li class="tw-flex tw-gap-2 tw-items-center">
-                        {{ 'lucide-circle-check-big.svg' | inline_asset_content }}
-                        {{ line }}
-                      </li>
-                    {% endfor %}
-                    </ul>
-                    {%else %}
-                    <p>{{ block.settings.description }}</p>
-                  {% endif %}
-                {% endunless %}
-                {% unless block.settings.product == blank %}
-                    {% assign product_form_id = block.id %}
-                  <product-form data-section-id="{{ section.id }}">
-                    {%- form 'product'
-                      , block.settings.product
-                      , id: product_form_id
-                      , class: 'form'
-                      , novalidate: 'novalidate'
-                      , data-type: 'add-to-cart-form'
-                    -%}
-                      <input
-                        type="hidden"
-                        name="id"
-                        value="{{ block.settings.product.selected_or_first_available_variant.id }}"
-                        class="product-variant-id"
-                        {% if block.settings.product.selected_or_first_available_variant.available == false %}
-                        disabled
-                        {% endif %}>
-                      <button
-                        id="{{ product_form_id }}-submit"
-                        type="submit"
-                        name="add"
-                        class="quick-add__submit button button--full-width"
-                        aria-haspopup="dialog"
-                        aria-labelledby="{{ product_form_id }}-submit title-{{ section_id }}-{{ block.settings.product.id }}"
-                        aria-live="polite"
-                        data-sold-out-message="true"
-                        {% if block.settings.product.selected_or_first_available_variant.available == false %}
-                        disabled
-                        {% endif %}>
-                        <span>
-                          {%- if block.settings.product.selected_or_first_available_variant.available -%}
-                            {{ 'products.product.add_to_cart' | t }}
-                          {%- else -%}
-                            {{ 'products.product.sold_out' | t }}
-                          {%- endif -%}
-                        </span>
-                        {%- render 'loading-spinner' -%}
-                      </button>
-                    {%- endform -%}
-                  </product-form>
-                {% endunless %}
-
+                    class="card-image-primary-{{section.id}} md:group-hover:tw-scale-110 tw-transition-all tw-duration-300 tw-ease-in-out tw-select-none" />
+                  {% endunless %}
+                    {% unless block.settings.image_secondary == blank %}
+                    <img
+                      style="transform: ({% if block.settings.image_secondary_offset_x_flip %}-{% endif %}{{block.settings.image_secondary_offset_x}}%;  {% if block.settings.image_primary_offset_y_flip %}-{% endif %}{{block.settings.image_primary_offset_y}}%)"
+                      srcset="{{ block.settings.image_secondary | image_url: width: 350 }} 1x, {{ block.settings.image_secondary | image_url: width: 700 }} 2x"
+                      sizes="300px, 600px"
+                      class="card-image-secondary-{{section.id}} md:group-hover:tw-opacity-100 tw-opacity-0 md:group-hover:tw-scale-110 tw-transition-all tw-duration-300 tw-ease-in-out tw-select-none" />
+                  {% endunless %}
+              {%if block.settings.product != blank%}</a>{% else %}</div>{% endif %}
+                <div class="card-info-container-{{ section.id }}">
+                  <h4 class="h3">
+                    {% if block.settings.title == blank %}
+                      {{ block.settings.product.title }}
+                    {% else %}
+                      {{ block.settings.title }}{% endif %}
+                  </h4>
+                  {% unless block.settings.product == blank %}
+                    <span class="tw-mb-4">
+                      {{ block.settings.product.price | money }}
+                    </span>
+                  {% endunless %}
+  
+                  {% unless block.settings.description == blank %}
+                    {% assign description_lines = block.settings.description | split: "|" %}
+                    {% if description_lines.size > 1 %}
+                      <ul class="tw-flex tw-flex-col tw-gap-2">
+                      {% for line in description_lines %}
+                        <li class="tw-flex tw-gap-2 tw-items-center">
+                          {{ 'lucide-circle-check-big.svg' | inline_asset_content }}
+                          {{ line }}
+                        </li>
+                      {% endfor %}
+                      </ul>
+                      {%else %}
+                      <p>{{ block.settings.description }}</p>
+                    {% endif %}
+                  {% endunless %}
+                  {% unless block.settings.product == blank %}
+                      {% assign product_form_id = block.id %}
+                    <product-form data-section-id="{{ section.id }}">
+                      {%- form 'product'
+                        , block.settings.product
+                        , id: product_form_id
+                        , class: 'form'
+                        , novalidate: 'novalidate'
+                        , data-type: 'add-to-cart-form'
+                      -%}
+                        <input
+                          type="hidden"
+                          name="id"
+                          value="{{ block.settings.product.selected_or_first_available_variant.id }}"
+                          class="product-variant-id"
+                          {% if block.settings.product.selected_or_first_available_variant.available == false %}
+                          disabled
+                          {% endif %}>
+                        <button
+                          id="{{ product_form_id }}-submit"
+                          type="submit"
+                          name="add"
+                          class="quick-add__submit button button--full-width"
+                          aria-haspopup="dialog"
+                          aria-labelledby="{{ product_form_id }}-submit title-{{ section_id }}-{{ block.settings.product.id }}"
+                          aria-live="polite"
+                          data-sold-out-message="true"
+                          {% if block.settings.product.selected_or_first_available_variant.available == false %}
+                          disabled
+                          {% endif %}>
+                          <span>
+                            {%- if block.settings.product.selected_or_first_available_variant.available -%}
+                              {{ 'products.product.add_to_cart' | t }}
+                            {%- else -%}
+                              {{ 'products.product.sold_out' | t }}
+                            {%- endif -%}
+                          </span>
+                          {%- render 'loading-spinner' -%}
+                        </button>
+                      {%- endform -%}
+                    </product-form>
+                  {% endunless %}
+  
+                </div>
               </div>
-            </div>
-          </swiper-slide>
-        {% endif %}
-      {% endfor %}
-    </swiper-container>
+            </li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+    </div>
   </div>
 </section>
 
 <script src="{{ 'quick-add.js' | asset_url }}" defer="defer"></script>
 
 <script>
-  
-  document.addEventListener("DOMContentLoaded", ()=> {
-  const swiper = new Swiper("#swiper-{{section.id}}", {slidesPerView: 1,
-    spaceBetween: 16,
-    observer:true,
-      keyboard: {
-    enabled: true,
-    lazyPreloadPrevNext: 5,
-  },
-  breakpoints: {
-    320: {
+  document.addEventListener("DOMContentLoaded", () => {
+    const swiper = new Swiper(".swiper-{{section.id}}", {
       slidesPerView: 1,
-    },
-    480: {
-      slidesPerView: 2,
-    },
-    // when window width is >= 640px
-    960: {
-      slidesPerView: 4,
-    }
-  }
-  })
+      spaceBetween: 16,
+      observer: true,
+      keyboard: {
+        enabled: true,
+      },
+      lazy: {
+        loadPrevNext: true, // Lazy load nearby slides
+        loadPrevNextAmount: 5,
+      },
+      breakpoints: {
+        320: {
+          slidesPerView: 1,
+        },
+        480: {
+          slidesPerView: 2,
+        },
+        960: {
+          slidesPerView: 4,
+        }
+      }
+    });
 
+    const leftMask = document.querySelector('#left-mask-{{section.id}}');
 
+    // Listen to swiper progress event
+    swiper.on('progress', (progress) => {
+      if (progress !== 0) {
+        leftMask.classList.remove("hidden");
+      } else {
+        leftMask.classList.add("hidden");
+      }
+    });
 
-  })
+    // Listen to swiper slide change event
+    swiper.on('slideChange', () => {
+      console.log('slide changed');
+    });
+  });
 </script>
 
-<script>
-  const swiperEl = document.querySelector('swiper-container');
-  const leftMask = document.querySelector('#left-mask-{{section.id}}')
-
-  swiperEl.addEventListener('swiperprogress', (event) => {
-    const [swiper, progress] = event.detail;
-    if(progress != 0){
-leftMask.classList.remove("hidden")
-    } else {
-leftMask.classList.add("hidden")
-        
-    }
-  });
-
-  swiperEl.addEventListener('swiperslidechange', (event) => {
-    console.log('slide changed');
-  });
-</script>
 
 
 {% schema %}
